tests/stderr-snapshots/integration__integration__ecl_features__eosd_exported_fn_bad_siggy_string.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: non-const string variable
  ┌─ <input>:7:11
  │
7 │ void bad1(string arg) {}
  │           ^^^^^^ only possible for const vars


